--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/node": "^16.4.13",
 		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.3.5"
 	}
