--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "ES2015",
 		"module": "commonjs",
 		"outDir": "build",
-		"strict": true,
+		// "strict": true,
 		"resolveJsonModule": true
 	},
 	"include": ["TS-JS/src/**/*"],
