--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "ES2020",
+		"strict": true,
 		"module": "commonjs",
 		"outDir": "build",
 		// "strict": true,
