--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 		"module": "commonjs",
 		"outDir": "build",
 		// "strict": true,
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
+		"esModuleInterop": true
 	},
 	"include": ["TS-JS/TS/**/*"],
 	"exclude": ["node_modules"]
